<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.manager.avtivitiesweek2.ConfirmaDatos">

    <!-- Cabecera -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmar Datos"
        android:textColor="#123124"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <!-- Nombre Completo -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/separacionCampos">
        <TextView
            android:id="@+id/idNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreCompleto"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idNombreVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_toRightOf="@id/idNombre"/>
    </RelativeLayout>

    <!-- Fecha NAcimiento -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/separacionCampos">
        <TextView
            android:id="@+id/idFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaNacimento"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/idFechaVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_toRightOf="@id/idFecha"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/separacionCampos">
        <TextView
            android:id="@+id/idTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/idTelefonoVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_toRightOf="@id/idTelefono"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/separacionCampos">
        <TextView
            android:id="@+id/idEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/idEmailVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_toRightOf="@id/idEmail"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/separacionCampos"
        >
        <TextView
            android:id="@+id/idDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionContacto"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/idDescripcionVariable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_toRightOf="@id/idDescripcion"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Editar" />
</LinearLayout>